tests/errortests/wrong_return_type.txt
FILENAME:8:9: error: the type for the variable "my_function" is "string" but a "integer32" was assigned.
        my_function := x + y;
        ^--------------------
